Ensure that the global header has a proper aria-labelledby attribute.

--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -1,7 +1,7 @@
-<header class="site-header">
+<header class="site-header" aria-labelledby="midd-site-header-label">
   <div class="site-header__primary">
     <div class="site-header__brand">
-      <h1 class="site-header__title">
+      <h1 class="site-header__title" id="midd-site-header-label">
         <a href="/" class="site-header__home-link">
           <span class="site-header__logo">{{site_title}}</span>
         </a>
