Ensure that the page headeer has a proper aria-labelledby attribute.

--- a/src/templates/partials/page-header.twig
+++ b/src/templates/partials/page-header.twig
@@ -1,4 +1,4 @@
-<header class="page-header">
+<header class="page-header" aria-labelledby="midd-page-header-label">
   <div class="page-header__row">
 
     <div class="page-header__primary">
