Ensure that the T08 Event Detail header has a proper aria-labelledby attribute.

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -14,7 +14,7 @@
         <div class="row">
 
           <div class="col-md-push-1 col-md-7">
-            <header class="event-detail__header">
+            <header class="event-detail__header" aria-labelledby="midd-event-label">
               <h2 class="event-detail__title" id="midd-event-label">Museum of Art Lecture Series</h2>
               <div class="event-detail__meta">
                 <p class="event-detail__datetime">
