Ensure that the page header on the T08 Event Detail page has a proper aria-labelledby attribute.

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 
 {% block page %}
-  <section class="page">
+  <section class="page" aria-labelledby="midd-page-header-label">
 
     {% include 'partials/page-header.twig' with {
       breadcrumb: [
