--- a/src/templates/partials/event-teaser.twig
+++ b/src/templates/partials/event-teaser.twig
@@ -1,4 +1,4 @@
-<article class="event-teaser">
+<article class="event-teaser" aria-labelledby="midd-event-label-{{i}}">
   <figure class="event-teaser__media">
     <a href="{{url}}">
       <picture>
@@ -11,7 +11,7 @@
   <div class="event-teaser__body">
     <p class="event-teaser__meta"><strong>{{date}}</strong></p>
     <p class="event-teaser__meta"><span>{{time}}</span>, <span>{{local}}</span></p>
-    <h3 class="event-teaser__title"><a href="{{url}}">{{title}}</a></h3>
+    <h3 class="event-teaser__title" id="midd-event-label-{{i}}"><a href="{{url}}">{{title}}</a></h3>
     <div class="event-teaser__blurb">{{blurb}}</div>
     <ul class="event-teaser__metalist">
       {% for item in metalist %}
