remove unused classes on image elements

--- a/src/templates/partials/event-teaser.twig
+++ b/src/templates/partials/event-teaser.twig
@@ -4,7 +4,7 @@
       <picture>
         <source srcset="http://placehold.it/160x120" media="(min-width: 580px)">
         <source srcset="http://placehold.it/100x75">
-        <img src="http://placehold.it/160x120" srcset="" alt="" class="event-teaser__img">
+        <img src="http://placehold.it/160x120" srcset="" alt="">
       </picture>
     </a>
   </figure>
