--- a/src/templates/t16-info-for-students.twig
+++ b/src/templates/t16-info-for-students.twig
@@ -96,7 +96,7 @@
                   <picture>
                     <source srcset="http://placehold.it/160x120" media="(min-width: 580px)">
                     <source srcset="http://placehold.it/100x75">
-                    <img src="http://placehold.it/160x120" srcset="" alt="" class="media-object__img">
+                    <img src="http://placehold.it/160x120" srcset="" alt="">
                   </picture>
                 </a>
               {% endblock %}
@@ -112,7 +112,7 @@
                   <picture>
                     <source srcset="http://placehold.it/160x120" media="(min-width: 580px)">
                     <source srcset="http://placehold.it/100x75">
-                    <img src="http://placehold.it/160x120" srcset="" alt="" class="media-object__img">
+                    <img src="http://placehold.it/160x120" srcset="" alt="">
                   </picture>
                 </a>
               {% endblock %}
@@ -128,7 +128,7 @@
                   <picture>
                     <source srcset="http://placehold.it/160x120" media="(min-width: 580px)">
                     <source srcset="http://placehold.it/100x75">
-                    <img src="http://placehold.it/160x120" srcset="" alt="" class="media-object__img">
+                    <img src="http://placehold.it/160x120" srcset="" alt="">
                   </picture>
                 </a>
               {% endblock %}
