finish draft of profile template

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -53,8 +53,10 @@
 @import 'components/page';
 @import 'components/pagination';
 @import 'components/panel';
+@import 'components/profile-detail';
 @import 'components/profile-explorer';
 @import 'components/profile-info';
+@import 'components/profile-section';
 @import 'components/profile-spotlight-item';
 @import 'components/profile';
 @import 'components/program-panel';
@@ -75,6 +77,7 @@
 @import 'components/speaker';
 @import 'components/spotlight-item';
 @import 'components/story-teaser-lite';
+@import 'components/story-teaser';
 @import 'components/video';
 
 // utils
