--- a/src/templates/t05-faculty-profile.twig
+++ b/src/templates/t05-faculty-profile.twig
@@ -13,28 +13,22 @@
     <article class="profile-detail">
       <div class="container">
         <div class="row">
-          <div class="col-md-push-1 col-md-10">
+          <div class="col-md-push-1 col-md-11">
 
-            <header class="u-mb-4">
+            <header class="profile-detail__header">
               <h2 class="profile-detail__name">Beryl Levinger</h2>
               <p class="profile-detail__title">Program Chair, Master of Public Administration and International Policy and Development</p>
             </header>
 
-            <div class="row">
-              <div class="col-md-4 flex-md-last">
-
+            <div class="profile-detail__body">
+              <div class="profile-detail__card">
                 <div class="row">
-                  <div class="col-xs-6 col-md-12 flex-last flex-md-first u-text-right">
-                    <figure class="u-mb-4">
-                      <pictue>
-                        <source srcset="//placehold.it/244x340" media="(min-width: 960px)">
-                        <source srcset="//placehold.it/155x216" media="(min-width: 580px)">
-                        <source srcset="//placehold.it/86x119">
-                        <img src="//placehold.it/244x340" alt="">
-                      </pictue>
-                    </figure>
+
+                  <div class="profile-detail__photo">
+                    <img src="//placehold.it/306x426" srcset="//placehold.it/306x426 1x, //placehold.it/612x852 2x" alt="">
                   </div>
-                  <div class="col-xs-6 col-md-12 flex-first flex-md-last">
+
+                  <div class="profile-detail__info">
                     <dl class="profile-info">
                       <dt class="profile-info__title">Office</dt>
                       <dd class="profile-info__text">E6-364</dd>
@@ -54,43 +48,81 @@
                       </dd>
                     </dl>
                   </div>
-                </div>
 
+                </div>
               </div>
-              <div class="col-md-8 flex-md-first">
+              <div class="profile-detail__content">
 
-                <div class="profile-detail__content">
-
-                  <div class="typography">
-                    <p>Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Maecenas elementum augue nec nisl. Proinauctor lorem at nibh. Curabitur nulla purus, feugiat id, elementum in, lobortis quis, pede. Vivamus sodales adipiscing sapien. Vestibulum posuere nulla eget wisi.</p>
-                    <p>Integer volutpat ligula eget enim. Suspendisse vitae arcu. Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Maecenas elementum augue nec nisl. Proin auctor lorem at nibh. Curabitur nulla purus, feugiat id, elementum in, lobortis quis, pede. Vivamus sodales adipiscing sapien. Vestibulum posuere nulla eget wisi.</p>
-                  </div>
-
-                  <section class="profile-section">
-                    <h3 class="profile-section__title">Courses Taught</h3>
-                    <ul class="profile-section__list">
-                      <li class="list__item">Lorem ipsum dolor sit amet</li>
-                      <li class="list__item">Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
-                    </ul>
-                  </section>
-
-                  <section class="profile-section">
-                    <h3 class="profile-section__title">Courses Taught</h3>
-                    <ul class="profile-section__list">
-                      <li class="list__item">Lorem ipsum dolor sit amet</li>
-                      <li class="list__item">Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
-                    </ul>
-                  </section>
-
-                  <section class="profile-section">
-                    <h3 class="profile-section__title">Courses Taught</h3>
-                    <ul class="profile-section__list">
-                      <li class="list__item">Lorem ipsum dolor sit amet</li>
-                      <li class="list__item">Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
-                    </ul>
-                  </section>
-
+                <div class="typography">
+                  <p>Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Maecenas elementum augue nec nisl. Proinauctor lorem at nibh. Curabitur nulla purus, feugiat id, elementum in, lobortis quis, pede. Vivamus sodales adipiscing sapien. Vestibulum posuere nulla eget wisi.</p>
+                  <p>Integer volutpat ligula eget enim. Suspendisse vitae arcu. Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Maecenas elementum augue nec nisl. Proin auctor lorem at nibh. Curabitur nulla purus, feugiat id, elementum in, lobortis quis, pede. Vivamus sodales adipiscing sapien. Vestibulum posuere nulla eget wisi.</p>
                 </div>
+
+                <section class="profile-section">
+                  <h3 class="profile-section__title">Courses Taught</h3>
+                  <ul class="profile-section__list">
+                    <li class="profile-section__item"><a href="#">Lorem ipsum dolor sit amet</a></li>
+                    <li class="profile-section__item"><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quo</a>d</li>
+                  </ul>
+                </section>
+
+                <section class="profile-section">
+                  <h3 class="profile-section__title">Areas of Interest</h3>
+                  <ul class="profile-section__list">
+                    <li class="profile-section__item">Lorem ipsum dolor sit amet</li>
+                    <li class="profile-section__item">Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
+                  </ul>
+                </section>
+
+                <section class="profile-section">
+                  <h3 class="profile-section__title">Research Centers</h3>
+                  <ul class="profile-section__list">
+                    <li class="profile-section__item"><a href="">Lorem ipsum dolor sit amet</a></li>
+                    <li class="profile-section__item"><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quod</a></li>
+                  </ul>
+                </section>
+
+                <section class="profile-section">
+                  <h3 class="profile-section__title">Academic Degrees</h3>
+                  <ul class="profile-section__list">
+                    <li class="profile-section__item">Lorem ipsum dolor sit amet</li>
+                    <li class="profile-section__item">Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
+                  </ul>
+                </section>
+
+                <section class="profile-section">
+                  <h3 class="profile-section__title">Latest Publication</h3>
+
+                  <article>
+                    <h4 class="h3"><a href="#">Islam, Islamism, and Politics in Eurasia Report</a></h4>
+                    <p>Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos.</p>
+                  </article>
+                </section>
+
+                <section class="profile-section">
+                  <h3 class="profile-section__title">Upcoming Event</h3>
+
+                  {% include 'partials/event-teaser-lite.twig' with {
+                    title: 'Museum of Art Lecture Series',
+                    date: 'Jun 12',
+                    time: '4:00 PM',
+                    location: 'McCone Irvine Auditoriumh'
+                  } %}
+                </section>
+
+                <section class="profile-section">
+                  <h3 class="profile-section__title">Beryl Levinger News Feed</h3>
+
+                  <ul class="list list--lg">
+                    {% for i in 0..1 %}
+                      <li class="list__item">
+                        {% include 'partials/story-teaser.twig' %}
+                      </li>
+                    {% endfor %}
+                  </ul>
+
+                </section>
+
 
               </div>
             </div>
