add aria-labelledby to sections

--- a/src/templates/t05-faculty-profile.twig
+++ b/src/templates/t05-faculty-profile.twig
@@ -58,40 +58,40 @@
                   <p>Integer volutpat ligula eget enim. Suspendisse vitae arcu. Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Maecenas elementum augue nec nisl. Proin auctor lorem at nibh. Curabitur nulla purus, feugiat id, elementum in, lobortis quis, pede. Vivamus sodales adipiscing sapien. Vestibulum posuere nulla eget wisi.</p>
                 </div>
 
-                <section class="profile-section">
-                  <h3 class="profile-section__title">Courses Taught</h3>
+                <section class="profile-section" aria-labelledby="midd-profile-section-courses-label">
+                  <h3 class="profile-section__title" id="midd-profile-section-courses-label">Courses Taught</h3>
                   <ul class="profile-section__list">
                     <li class="profile-section__item"><a href="#">Lorem ipsum dolor sit amet</a></li>
                     <li class="profile-section__item"><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quo</a>d</li>
                   </ul>
                 </section>
 
-                <section class="profile-section">
-                  <h3 class="profile-section__title">Areas of Interest</h3>
+                <section class="profile-section" aria-labelledby="midd-profile-section-interests-label">
+                  <h3 class="profile-section__title" id="midd-profile-section-interests-label">Areas of Interest</h3>
                   <ul class="profile-section__list">
                     <li class="profile-section__item">Lorem ipsum dolor sit amet</li>
                     <li class="profile-section__item">Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
                   </ul>
                 </section>
 
-                <section class="profile-section">
-                  <h3 class="profile-section__title">Research Centers</h3>
+                <section class="profile-section" aria-labelledby="midd-profile-section-centers-label">
+                  <h3 class="profile-section__title" id="midd-profile-section-centers-label">Research Centers</h3>
                   <ul class="profile-section__list">
                     <li class="profile-section__item"><a href="">Lorem ipsum dolor sit amet</a></li>
                     <li class="profile-section__item"><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quod</a></li>
                   </ul>
                 </section>
 
-                <section class="profile-section">
-                  <h3 class="profile-section__title">Academic Degrees</h3>
+                <section class="profile-section" aria-labelledby="midd-profile-section-degrees-label">
+                  <h3 class="profile-section__title" id="midd-profile-section-degrees-label">Academic Degrees</h3>
                   <ul class="profile-section__list">
                     <li class="profile-section__item">Lorem ipsum dolor sit amet</li>
                     <li class="profile-section__item">Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
                   </ul>
                 </section>
 
-                <section class="profile-section">
-                  <h3 class="profile-section__title">Latest Publication</h3>
+                <section class="profile-section" aria-labelledby="midd-profile-section-pubs-label">
+                  <h3 class="profile-section__title" id="midd-profile-section-pubs-label">Latest Publication</h3>
 
                   <article>
                     <h4 class="h3"><a href="#">Islam, Islamism, and Politics in Eurasia Report</a></h4>
@@ -99,8 +99,8 @@
                   </article>
                 </section>
 
-                <section class="profile-section">
-                  <h3 class="profile-section__title">Upcoming Event</h3>
+                <section class="profile-section" aria-labelledby="midd-profile-section-events-label">
+                  <h3 class="profile-section__title" id="midd-profile-section-events-label">Upcoming Event</h3>
 
                   {% include 'partials/event-teaser-lite.twig' with {
                     title: 'Museum of Art Lecture Series',
@@ -110,8 +110,8 @@
                   } %}
                 </section>
 
-                <section class="profile-section">
-                  <h3 class="profile-section__title">Beryl Levinger News Feed</h3>
+                <section class="profile-section" aria-labelledby="midd-profile-section-news-label">
+                  <h3 class="profile-section__title" id="midd-profile-section-news-label">Beryl Levinger News Feed</h3>
 
                   <ul class="list list--lg">
                     {% for i in 0..1 %}
