add event card styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,7 @@
 @import 'components/card';
 @import 'components/carousel';
 @import 'components/drawer';
+@import 'components/event-card';
 @import 'components/event-detail';
 @import 'components/event-teaser-lite';
 @import 'components/event-teaser';
