--- a/src/templates/partials/event-card.twig
+++ b/src/templates/partials/event-card.twig
@@ -7,8 +7,7 @@
     </a>
   </figure>
   <h3 class="event-card__title"><a href="#">Middlebury Institute’s TESOL/TFL Program: Innovations in Language Learning</a></h3>
-  <p class="event-card__datetime">
-    <time datetime="">Sat Jul 23, 2016, 4:15 PM</time>
-  </p>
+  {#Not sure why, but this twig compilation is not letting me wrap the times with <time> while keeping no spaces around ndash#}
+  <p class="event-card__datetime">September 24, 2017 &middot; 4:15&nbsp;PM</p>
   <p class="event-card__local">McCone Irvine Auditorium</p>
 </article>
