--- a/src/templates/partials/event-teaser.twig
+++ b/src/templates/partials/event-teaser.twig
@@ -9,8 +9,8 @@
     </a>
   </figure>
   <div class="event-teaser__body">
-    <p class="event-teaser__meta"><strong>{{date}}</strong></p>
-    <p class="event-teaser__meta"><span>{{time}}</span>, <span>{{local}}</span></p>
+    <p class="event-teaser__meta"><strong><time datetime="">September 25, 2016</time></strong> &middot; <strong><time datetime="">5:00 PM</time></strong></p>
+    <p class="event-teaser__meta"><span>{{local}}</span></p>
     <h3 class="event-teaser__title" id="midd-event-label-{{i}}"><a href="{{url}}">{{title}}</a></h3>
     <div class="event-teaser__blurb">{{blurb}}</div>
     <ul class="event-teaser__metalist">
