use ndash for ranges

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -18,7 +18,7 @@
               <h2 class="event-detail__title" id="midd-event-label">Museum of Art Lecture Series</h2>
               <div class="event-detail__meta">
                 <p class="event-detail__datetime">
-                  <time datetime="">August 18, 2017 &middot; 4:00 PM–<br>August 19, 2017 &middot; 8:00 PM</time>
+                  <time datetime="">August 18, 2017 &middot; 4:00 PM&ndash;<br>August 19, 2017 &middot; 8:00 PM</time>
                 </p>
                 <p class="event-detail__admission">TESOL Members $175; Non-members $225</p>
                 <p class="event-detail__access">Open to the Public</p>
