allow for toggle_target and toggle_linked to be passed to drawer and used instead of id

--- a/src/templates/partials/drawer.twig
+++ b/src/templates/partials/drawer.twig
@@ -3,5 +3,5 @@
     {% block content %}
     {% endblock %}
   </div>
-  <div class="drawer__overlay" data-toggle-target="#{{id}}" data-toggle-linked="{{id}}"></div>
+  <div class="drawer__overlay" data-toggle-target="{{toggle_target}}" data-toggle-linked="{{toggle_linked}}"></div>
 </div>
