use modifier to style sub lists

--- a/src/templates/partials/page-nav.twig
+++ b/src/templates/partials/page-nav.twig
@@ -7,7 +7,7 @@
 
         {% if item.items %}
 
-        <ul class="page-nav__list">
+        <ul class="page-nav__list page-nav__list--sub">
           {% for subitem in item.items %}
 
             <li class="page-nav__item">
