--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -18,7 +18,7 @@
 
   <div class="container">
     {#TODO: needs dividers#}
-    <div class="row">
+    <div class="row row--dividers-reverse">
       <div class="col-md-push-1 col-md-3 col--collapse flex-md-last">
 
         <div class="col">
