--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -51,7 +51,7 @@
       </div>
       <div class="col-md-push-1 col-md-8 flex-md-first">
 
-        <ol class="list list--dividers u-mb-6">
+        <ol class="list list--dividers list--md u-mb-6">
           {% for i in 0..7 %}
             <li class="list__item">
               {% include 'partials/event-teaser.twig' with {
