put page title within page-header instead of in the article

--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -6,7 +6,8 @@
     {% include 'partials/page-header.twig' with {
       breadcrumb: [
         { text: 'Events' }
-      ]
+      ],
+      title: 'Museum of Art Lecture Series'
     } %}
 
     <article class="event-detail" aria-labelledby="midd-event-label">
@@ -15,7 +16,6 @@
 
           <div class="col-md-push-1 col-md-7">
             <header class="event-detail__header" aria-labelledby="midd-event-label">
-              <h2 class="event-detail__title" id="midd-event-label">Museum of Art Lecture Series</h2>
               <div class="event-detail__meta">
                 <p class="event-detail__datetime">
                   <time datetime="">August 18, 2017 &middot; 4:00 PM&ndash;<br>August 19, 2017 &middot; 8:00 PM</time>
